--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <nav>
 <a href="index.html">Home</a>
 <a href="country.html">Country Reports</a>
+<a href="about.html">Backstory</a>
 </nav>
 
 <section>
@@ -42,3 +43,4 @@
 
 </body>
 </html>
+
